hphp/test/slow/container-ref-init/array-init4.php.expectf

Fatal error: Collection element cannot be marked as reference in %s/array-init4.php on line 7
